--- a/ui/MainWindowManagement.ui
+++ b/ui/MainWindowManagement.ui
@@ -48,7 +48,7 @@
      <string notr="true">font: 57 14pt &quot;SFU Toledo&quot;;</string>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab_8">
      <attribute name="title">
@@ -60,7 +60,7 @@
         <x>530</x>
         <y>10</y>
         <width>741</width>
-        <height>461</height>
+        <height>481</height>
        </rect>
       </property>
       <property name="font">
@@ -232,7 +232,7 @@ color: rgb(0, 0, 0);</string>
         <x>10</x>
         <y>10</y>
         <width>511</width>
-        <height>461</height>
+        <height>481</height>
        </rect>
       </property>
       <property name="font">
@@ -269,7 +269,7 @@ hover {
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>80</y>
+         <y>180</y>
          <width>121</width>
          <height>31</height>
         </rect>
@@ -295,7 +295,7 @@ hover {
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>130</y>
+         <y>230</y>
          <width>151</width>
          <height>31</height>
         </rect>
@@ -320,7 +320,7 @@ hover {
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>180</y>
+         <y>280</y>
          <width>151</width>
          <height>31</height>
         </rect>
@@ -345,7 +345,7 @@ hover {
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>230</y>
+         <y>330</y>
          <width>151</width>
          <height>31</height>
         </rect>
@@ -370,7 +370,7 @@ hover {
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>280</y>
+         <y>130</y>
          <width>191</width>
          <height>31</height>
         </rect>
@@ -388,15 +388,15 @@ hover {
         <string notr="true">background-color: transparent; border:transparent;</string>
        </property>
        <property name="text">
-        <string>Customer Code:</string>
+        <string>Customer Name :</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_173">
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>330</y>
-         <width>191</width>
+         <y>80</y>
+         <width>91</width>
          <height>31</height>
         </rect>
        </property>
@@ -419,8 +419,8 @@ hover {
       <widget class="QPushButton" name="pushButtonUpdate">
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>400</y>
+         <x>10</x>
+         <y>420</y>
          <width>91</width>
          <height>51</height>
         </rect>
@@ -469,8 +469,8 @@ QPushButton:pressed {
       <widget class="QPushButton" name="pushButtonDelete">
        <property name="geometry">
         <rect>
-         <x>180</x>
-         <y>400</y>
+         <x>130</x>
+         <y>420</y>
          <width>91</width>
          <height>51</height>
         </rect>
@@ -519,8 +519,8 @@ QPushButton:pressed {
       <widget class="QPushButton" name="pushButtonreset">
        <property name="geometry">
         <rect>
-         <x>330</x>
-         <y>400</y>
+         <x>260</x>
+         <y>420</y>
          <width>101</width>
          <height>51</height>
         </rect>
@@ -602,7 +602,7 @@ QWidget:hover {
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap>../images/hotel.png</pixmap>
+        <pixmap>../images/booking.jpg</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -622,46 +622,6 @@ QWidget:hover {
 background-color: rgb(255, 255, 255,200);
 color: rgb(0, 0, 0);</string>
        </property>
-      </widget>
-      <widget class="QComboBox" name="comboBox_3">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>280</y>
-         <width>281</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">border: 2px solid transparent;
-background-color: rgb(255, 255, 255,200);
-color: rgb(0, 0, 0);</string>
-       </property>
-       <item>
-        <property name="text">
-         <string>1</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>2</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>3</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>4</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>5</string>
-        </property>
-       </item>
       </widget>
       <widget class="QLineEdit" name="lineEdit_3">
        <property name="geometry">
@@ -686,7 +646,7 @@ color: rgb(0, 0, 0);</string>
         <rect>
          <x>10</x>
          <y>30</y>
-         <width>121</width>
+         <width>151</width>
          <height>41</height>
         </rect>
        </property>
@@ -704,7 +664,7 @@ color: rgb(0, 0, 0);</string>
  border:transparent;</string>
        </property>
        <property name="text">
-        <string>Name :</string>
+        <string>Customer Code :</string>
        </property>
       </widget>
       <widget class="QLineEdit" name="lineEdit_4">
@@ -774,6 +734,74 @@ color: rgb(0, 0, 0);</string>
        </property>
        <property name="text">
         <string/>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_8">
+       <property name="geometry">
+        <rect>
+         <x>190</x>
+         <y>280</y>
+         <width>281</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: 2px solid transparent;
+background-color: rgb(255, 255, 255,200);
+color: rgb(0, 0, 0);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButtonReport">
+       <property name="geometry">
+        <rect>
+         <x>400</x>
+         <y>420</y>
+         <width>91</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>#9Slide03 SFU Toledo Bold</family>
+         <pointsize>-1</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">
+QPushButton {
+    background-color: qlineargradient(spread:pad, x1:0.221636, y1:0.171091, x2:0.994318, y2:0.960227,
+                                      stop:0.0681818 rgba(80, 11, 40, 255),
+                                      stop:1 rgba(211, 26, 48, 243)); /* Gradient màu nền */
+    color: white;
+    border-radius: 10px;
+    padding: 8px;
+    font-size: 14px;
+
+    /* Viền sáng ở trên &amp; tối ở dưới để tạo hiệu ứng 3D */
+    border: 2px solid rgb(255, 255, 255); /* Viền trắng tổng thể */
+    border-top: 3px solid rgb(255, 255, 255); /* Viền trên sáng hơn */
+    border-left: 3px solid rgb(255, 255, 255);
+    border-bottom: 3px solid rgb(150, 0, 20); /* Viền dưới tối hơn */
+    border-right: 3px solid rgb(150, 0, 20);
+}
+
+QPushButton:pressed {
+    border-top: 3px solid rgb(150, 0, 20); /* Khi nhấn, đổi viền trên tối hơn */
+    border-left: 3px solid rgb(150, 0, 20);
+    border-bottom: 3px solid rgb(255, 255, 255); /* Viền dưới sáng hơn */
+    border-right: 3px solid rgb(255, 255, 255);
+    background-color: rgb(150, 0, 20); /* Màu nền tối hơn khi nhấn */
+}
+</string>
+       </property>
+       <property name="text">
+        <string>Report</string>
        </property>
       </widget>
      </widget>
