--- a/ui/MainWindowInvoices.ui
+++ b/ui/MainWindowInvoices.ui
@@ -65,7 +65,7 @@ font: 10pt &quot;#9Slide03 Montserrat&quot;;</string>
       <string>Customer code:</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_bookingcode">
+    <widget class="QLineEdit" name="lineEdit_customercode">
      <property name="geometry">
       <rect>
        <x>120</x>
@@ -453,6 +453,26 @@ font: 75 10pt &quot;#9Slide03 SFU Toledo Bold&quot;;
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>6</x>
+      <y>3</y>
+      <width>801</width>
+      <height>681</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../images/login.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <zorder>label_12</zorder>
    <zorder>label</zorder>
    <zorder>groupBox</zorder>
    <zorder>tableWidget_invoices</zorder>
